--- a/naturet/views/layout.hbs
+++ b/naturet/views/layout.hbs
@@ -11,7 +11,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel='stylesheet' href='/stylesheets/fonts.css' />
+  {{!-- <link rel='stylesheet' href='/stylesheets/fonts.css' /> --}}
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <meta name="google-signin-client_id" content="328598068379-7kdcok4tf4ng868nct6judoqkqt5l009.apps.googleusercontent.com">
@@ -24,7 +24,7 @@
   {{/if}}
   {{{ body }}}
   {{#if session}}
-  {{> footer}}
+  {{!-- {{> footer}} --}}
   {{/if}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
