--- a/naturet/views/partials/lastexperiences.hbs
+++ b/naturet/views/partials/lastexperiences.hbs
@@ -16,7 +16,7 @@
         <small class="category-tag" data-category="{{this.categories.[0]}}">#{{this.categories.[0]}}</small>
         <small class="category-tag" data-category="{{this.categories.[2]}}">#{{this.categories.[2]}}</small>
         <small class="category-tag" data-category="{{this.categories.[3]}}">#{{this.categories.[3]}}</small>
-        <div><p class="experience-card-description ml-0"><strong>Owner:</strong> <i><a class="nt-c" href="/{{this.id}}/profile">{{this.user.name}}</a></i></p></div>
+        <div><p class="experience-card-description ml-0"><strong>Owner:</strong> <i><a class="nt-c" href="/{{this.user.id}}">{{this.user.name}}</a></i></p></div>
       </div>
     </div>
     {{/each_upto}}
