--- a/naturet/views/partials/nav.hbs
+++ b/naturet/views/partials/nav.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
 
 	<a class="navbar-brand" href="/">
-		<img src="../img/logo-verde.svg" width="50" height="50" class="d-inline-block align-top" alt="">
+		<img src="/img/logo-verde.svg" width="50" height="50" class="d-inline-block align-top" alt="">
 		<span id="nav-logo-name">Natur<span id="nav-logo-name-app">app</span></span>
 	</a>
 
 	<div class="d-flex input-search-navbar mobile-none-nav">
-		<input type='text' name='' id="filter-word" class="w-100" placeholder="Busca experiencias">
+		<input type='text' name='' id="filter-word" class="w-100" placeholder="search experiences">
 		<button id="filter-button" class="btn btn-primary mt-2 w-25">Search</button>
 	</div>
 
