feat: user.controller done, and DB of mongo mblabs sincronize

--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -183,7 +183,7 @@ p{
 
 /*--navbar--*/
 
-/* .navbar-brand{
+ .navbar-brand{
   align-items: center;
   display: flex;
   color:white;
@@ -237,7 +237,7 @@ input::placeholder  {
   border-radius: 2px;
   padding-left: 10px;
 }
- */
+ 
 
 
 /*---navbar...*/
