--- a/naturet/views/experiences/form.hbs
+++ b/naturet/views/experiences/form.hbs
@@ -93,20 +93,20 @@
               <div class="form-group">
                 <label for="languages">Idiomas</label>
                 <br />
-                <input id="Español" type="checkbox" name="languages" value="Español" />
-                <label for="Español">Español</label>
+                <input id="Spanish" type="checkbox" name="languages" value="Spanish" />
+                <label for="Spanish">Spanish</label>
                 <br />
-                <input id="Inglés" type="checkbox" name="languages" value="Inglés" />
-                <label for="Inglés">Inglés</label>
+                <input id="English" type="checkbox" name="languages" value="English" />
+                <label for="English">English</label>
                 <br />
-                <input id="Francés" type="checkbox" name="languages" value="Francés" />
-                <label for="Francés">Francés</label>
+                <input id="French" type="checkbox" name="languages" value="French" />
+                <label for="French">French</label>
                 <br />
-                <input id="Alemán" type="checkbox" name="languages" value="Alemán" />
-                <label for="Alemán">Alemán</label>
+                <input id="German" type="checkbox" name="languages" value="German" />
+                <label for="German">German</label>
                 <br />
-                <input id="Chino" type="checkbox" name="languages" value="Chino" />
-                <label for="Chino">Chino</label>
+                <input id="Chinese" type="checkbox" name="languages" value="Chinese" />
+                <label for="Chinese">Chinese</label>
               </div>
 
               <div class="form-group">
@@ -117,17 +117,17 @@
               <div class="form-group">
                 <label for="includes">¿Que incluye?</label>
                 <br />
-                <input id="Bebidas" type="checkbox" name="includes" value="Bebidas" />
-                <label for="Bebidas">Bebidas</label>
+                <input id="Drinks" type="checkbox" name="includes" value="Drinks" />
+                <label for="Drinks">Drinks </label>
                 <br />
-                <input id="Comida" type="checkbox" name="includes" value="Comida" />
-                <label for="Comida">Comida</label>
+                <input id="Food" type="checkbox" name="includes" value="Food" />
+                <label for="Food">Food</label>
                 <br />
-                <input id="Aperitivo" type="checkbox" name="includes" value="Aperitivo" />
-                <label for="Aperitivo">Aperitivo</label>
+                <input id="Snack" type="checkbox" name="includes" value="Snack" />
+                <label for="Snack">Snack</label>
                 <br />
-                <input id="Equipo" type="checkbox" name="includes" value="Equipo" />
-                <label for="Equipo">Equipo</label>
+                <input id="Equipment" type="checkbox" name="includes" value="Equipment" />
+                <label for="Equipment">Equipment</label>
               </div>
 
               <div class="form-group">
