--- a/naturet/views/users/index.hbs
+++ b/naturet/views/users/index.hbs
@@ -1,4 +1,4 @@
-{{!-- {{> searchmobile}}
+ {{> searchmobile}}
 
 <header class="masthead">
   <div class="container-slider mx-auto h-100">
@@ -14,14 +14,14 @@
   </div>
 </header>
 
-{{> slidecategories}}
+{{> slidecategories}} 
 
-{{> lastexperiences}} --}}
+{{> lastexperiences}} 
+
+{{> pricesorted}}
 
 {{> recommended}}
 
-
-{{!-- 
 <div class="container nav-mobile mx-auto">
   <div class="row mx-auto align-items-center h-100">
     <div class="col-3 text-center">
@@ -59,4 +59,4 @@
     <a class="btn mt-3" id="caption-button-home" href="/creator/create">Become a creator</a>
   </div>
 </div>
-{{/if}} --}}
+{{/if}}
