--- a/naturet/views/partials/pricesorted.hbs
+++ b/naturet/views/partials/pricesorted.hbs
@@ -1,9 +1,9 @@
 <div class="container-slider mx-auto mb-0">
-  <h2>Últimas Experiencias</h2>
+  <h2>Best price oferts</h2>
   <p>Find what you want in the last experiences we upload</p>
   <hr>
   <section class="customer-experiencer slider mt-4 mb-0">
-    {{#each_upto sortexp 4 }}
+    {{#each_upto sortPriceExp 4 }}
     <div class="slide slide1">
       <a href="/experiences/{{this.id}}">
         <div class="image-slide-inside"style="background: url('{{#if this.photos.[0]}}{{this.photos.[0]}}{{else}}https://res.cloudinary.com/dwta0wgpp/image/upload/v1550007271/test/default-preview.jpg{{/if}}')">
