--- a/naturet/views/partials/searchmobile.hbs
+++ b/naturet/views/partials/searchmobile.hbs
@@ -1,7 +1,7 @@
 <div class="container search-mobile mx-auto">
   <div class="row mx-auto align-items-center h-100">
     <div class="col-12 mx-auto d-flex align-items-baseline justify-content-center search-div-mobile">
-      <input type='text' name='' id="filter-word-mobile" placeholder="Busca experiencias">
+      <input type='text' name='' id="filter-word-mobile" placeholder="Search Experiences">
       <button id="filter-button-mobile" class="btn btn-primary mt-2 "><i class="fas fa-search"></i></button>
     </div>
   </div>
