--- a/naturet/views/users/profile.hbs
+++ b/naturet/views/users/profile.hbs
@@ -1,171 +1,219 @@
-<div class="container profile-container">
-  <div class="row pb-5">
+{{> searchmobile}}
 
-    <div class="col-xl-3 col-md-3 col-12 ">
-      <div class=" profile-navigation d-flex flex-column mx-auto ">
-        <a href="">Categories</a>
-        <a href="">Some description</a>
-        <a href="">User role</a>
-        <a href="/profile">profile</a>
-        <a class="btn btn-danger" href="/profile/edit">Edit Profile</a>
-        {{#if session.creator}}
-        <a class="btn btn-default" href="/creator/edit">Edit Creator Profile</a>
-        {{/if}}
 
+<div class="container-slider mx-auto profile-container mt-6">
+  <div class="row pb-5 mt-5">
+    <div class="col-xl-4 col-md-12 col-12 row mx-auto">
+      <div class="profile-sidenav d-flex flex-column mx-auto " id="getFixed">
+        <div class="profile-sidenav-inside d-flex flex-column">
+          <a href="#categories">Categories</a>
+          <a href="#description">Some description</a>
+          <a href="#role">User role</a>
+          <a href="#experiences">Experiences</a>
+          <a class="btn btn-danger mt-3" id="edit-profile-button" href="/profile/edit">Edit Profile</a>
+          {{#if session.creator}}
+          <a class="btn btn-default" href="/creator/edit">Edit Creator Profile</a>
+          {{/if}}
+        </div>
       </div>
-
     </div>
 
-
-    <div class="col-xl-9 col-md-9 col-12">
-      <div class="text-center">
-        <img class="profile-image" src="{{session.photo}}" width="250px">
-        <h3>{{session.name}}</h3>
-        {{#if session.creator}}
-        <h5>Creator<span class="icon-030"></span></h5>
-        {{else}}
-        <h5>Adventurous</h5>
-        {{/if}}
+    <div class="col-xl-8 col-md-12 col-12">
+      <div class="row">
+        <div class="back-image-profile">
+        </div>
       </div>
+      <section class="border-bottom pb-5">
+        <div class="text-center mt-5">
+          <div>
+            <img class="profile-image" src="{{session.photo}}">
+            {{#if session.creator}}
+            <span class="creator-simbol"></span>
+            {{/if}}
+          </div>
+          <h3 id="profile-name" class="mt-2">{{session.name}} - <span class="nt-c">{{#if session.creator}}
+              Creator</span> <span class="icon-030 nt-c"></span>
+            {{else}}
+            Adventurous</span>
+            {{/if}}</span></h3>
+        </div>
+      </section>
       {{#if session.creator}}
 
       {{else}}
-      <hr>
-      <h5>Wanna become an Experiencer creator? Click and submit to our community!</h5>
-      <p>Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-        consectetur adipiscinconsectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-        consectetur adipiscin</p>
-      <a class="btn btn-primary p-2" href="creator/create">Become a creator</a>
+      <section class="border-bottom pb-5 pt-5 " id="description">
+          <h2><span class="far fa-user nt-c mr-3"></span>Become a creator! </h2>
+          <div class="mb-2">
+            <h5 class="mb-3 pt-2 nt-f profile-subtitle">Some description to let everybody know about your adventurer
+              self.</h5>
+            <p class="mb-5 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+              mattis urna sodales ornare semr adipiscing elit dis posuere,
+              mattis urna sper eros</p>
+              <a class="btn btn-primary p-2 btn-naturet w-100 nt-f p-3" href="creator/create">Become a creator</a>
+        </section>
+      
       {{/if}}
 
-      <hr>
-      <h1>categories</h1>
-      <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
-      <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p>
+      <section class="border-bottom pt-5 pb-4" id="categories">
+        <h2><span class="far fa-heart nt-c mr-3"></span>Your liked categories </h2>
+        <h5 class="mb-3 pt-2 nt-f profile-subtitle">Your categories are really important for naturapp, choose wisely.</h5>
+        <p class="mb-5 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+          mattis urna sodales ornare semper eros
+          dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+          fringilla porttitor tellus netus per facilisis habitant risus tristique.</p>
 
-      {{#if errors.error }}
-      <h2>{{ errors.error }}</h2>
-      {{/if}}
-      <form class="" method="POST" enctype="multipart/form-data">
-        <div class="row">
-          {{#each allCategories as |category| }}
+        {{#if errors.error }}
+        <h2>{{ errors.error }}</h2>
+        {{/if}}
+        <form class="" method="POST" enctype="multipart/form-data">
+          <div class="row">
+            {{#each allCategories as |category| }}
+            <div class="col-xl-2 col-md-2 col-6 noevent not-shown" style="display:{{#containCategory ../session category ../categories }}{{/containCategory}}">
+              <input type='checkbox' name="categories" class="input-category no-event" id="{{ category.id }}" value="{{ category.id }}"
+                {{#isCategorySelected ../session category ../categories }} {{/isCategorySelected}}>
+              <div class="category-card noevent">
+                <span class='icon-{{category.fontnum}}'></span>
+                <!-- descomentar esto par añadir estilo -->
+                <p class="category-name">{{ category.name }} </p>
+              </div>
+            </div>
+            </input>
+            {{/each}}
+          </div>
+      </section>
 
-          <div class="col-xl-2 col-md-3 col-6 noevent not-shown" style="display:{{#containCategory ../session category ../categories }}{{/containCategory}}">
-            <input type='checkbox' name="categories" class="input-category no-event" id="{{ category.id }}" value="{{ category.id }}"
-              {{#isCategorySelected ../session category ../categories }} {{/isCategorySelected}}>
-            <div class="category-card noevent">
-              <span class='icon-{{category.fontnum}}'></span>
-              <!-- descomentar esto par añadir estilo -->
-              <p class="category-name">{{ category.name }} </p>
+
+      <div class="form-group">
+        <section class=" pt-5 " id="description">
+          <h2><span class="far fa-comments nt-c mr-3"></span>Some description </h2>
+          <div class="mb-2">
+            <h5 class="mb-3 pt-2 nt-f profile-subtitle">Some description to let everybody know about your adventurer
+              self.</h5>
+            <p class="mb-5 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+              mattis urna sodales ornare semper eros
+              dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+              fringilla porttitor tellus netus per facilisis habitant risus tristique, consequat a neque vulputate
+              taciti
+              mattis at suspendisse malesuada justo potenti. Placerat porttitor.</p>
+        </section>
+
+        <section class="border-bottom pb-4">
+          <div class="row">
+            <div class="mb-2 col-xl-6 col-md-6 col-12">
+              <div class="border-div-profile">
+                <h4>About you:</h4>
+                <p class=" ml-0 profile-paragraph">{{session.about}}</p>
+              </div>
+            </div>
+
+            <div class="mb-2 col-xl-6 col-md-6 col-12">
+              <div class="border-div-profile">
+                <h4>Birth Date:</h4>
+                <p class=" ml-0 profile-paragraph">{{session.birth}}</p>
+              </div>
+            </div>
+
+            <div class="mb-2 col-xl-6 col-md-6 col-12">
+              <div class="border-div-profile">
+                <h4>Your country:</h4>
+                <p class=" ml-0 profile-paragraph">{{session.country}}</p>
+              </div>
+            </div>
+
+            <div class="mb-2 col-xl-6 col-md-6 col-12">
+              <div class="border-div-profile">
+                <h4>Your phone number:</h4>
+                <p class=" ml-0 profile-paragraph">{{session.phone}}</p>
+              </div>
             </div>
           </div>
-          </input>
+      </div>
+      </section>
 
-          {{/each}}
+      <section class="border-bottom pt-4  pb-5 mx-auto">
+        <h2 class="pb-3"><span class="far fa-star nt-c mr-3"></span>Your liked Experiences</h2>
+        <p class="mb-5 ml-0 profile-paragraph"> Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+          mattis urna sodales ornare semper eros
+          dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+          fringilla porttitor tellus netus per facilisis. <a href="#" class="nt-c"><strong>View all</strong></a>
+        </p>
+        {{> likedslider}}
+      </section>
 
-        </div>
-        <hr>
-        <div class="form-group">
-          <h1>Some description</h1>
+      <section class="border-bottom pt-5  pb-5">
+        <h2 class="pb-3"><span class="far fa-credit-card nt-c mr-3"></span>Your Purchased Experiences</h2>
+        <p class="mb-5 ml-0 profile-paragraph"> Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+          mattis urna sodales ornare semper eros
+          dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+          fringilla porttitor tellus netus per facilisis.<a href="#" class="nt-c"><strong>View all</strong></a>
+        </p>
+        {{> purchasedslider}}
+      </section>
 
-          <div class="mb-2">
-            <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-              consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
-              elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor in</p>
-            <h4>about you</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <h3>{{session.about}}</h3>
-            <hr>
+
+      {{#if session.creator}}
+      <section class="pt-5" id="role">
+        <h2><span class="far fa-address-card nt-c mr-3"></span>Your creator data </h2>
+        <div class="mb-2">
+          <h5 class="mb-3 pt-2 nt-f profile-subtitle">Some description to let everybody know about your adventurer
+            self.</h5>
+          <p class="mb-5 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+            mattis urna sodales ornare semper eros
+            dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi.</p>
+      </section>
+
+      <section class="border-bottom pb-4">
+        <div class="row">
+          <div class="mb-2 col-xl-6 col-md-6 col-12">
+            <div class="border-div-profile">
+              <h4>Expertise:</h4>
+              <p class=" ml-0 profile-paragraph">{{session.expertise}}</p>
+            </div>
           </div>
 
-          <div class="mb-2">
-            <h4>Birth Date</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <h3>{{session.birth}}</h3>
-            <hr>
+          <div class="mb-2 col-xl-6 col-md-6 col-12">
+            <div class="border-div-profile">
+              <h4>Creator email:</h4>
+              <p class=" ml-0 profile-paragraph">{{session.enterpriseEmail}}</p>
+            </div>
           </div>
 
-          <div class="mb-2">
-            <h4>From:</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</small>
-            <h3>{{session.country}}</h3>
-            <hr>
+          <div class="mb-2 col-xl-6 col-md-6 col-12">
+            <div class="border-div-profile">
+              <h4>Enterprise:</h4>
+              <p class=" ml-0 profile-paragraph">{{session.enterpriseDescription}}</p>
+            </div>
           </div>
 
-          <div class="mb-2">
-            <h4>Your phone number</h4><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit</small>
-            <h3>{{session.phone}}</h3>
-            <hr>
+          <div class="mb-2 col-xl-6 col-md-6 col-12">
+            <div class="border-div-profile">
+              <h4>Your phone number:</h4>
+              <p class=" ml-0 profile-paragraph">{{session.acreditation}}</p>
+            </div>
           </div>
         </div>
+      </section>
+      {{/if}}
 
-        <div class=" mb-2">
-          <h4> <span class="input-group-text"> <i class="fas fa-image"></i> </span>Your Album</h4>
-          {{#each_upto session.pictures 5}}
-          <img src="{{this}}" style="max-height: 200px;">
-          {{/each_upto}}
-        </div>
-
-        <hr>
-        <div class="mb-2 col-6">
-          <h4>Your Favourites Experiences</h4>
-          {{#each user.following as |experience| }}
-          <ul>
-            <li data-id="{{experience.id}}">
-              <div>
-                <a href="/experiences/{{ experience.id }}">{{experience.name}}</a>
-              </div>
-            </li>
-          </ul>
-          {{/each}}
-        </div>
-        <hr>
-        <div class="mb-2 col-6">
-          <h4>Your Purchased Experiences</h4>
-          {{user.purchased.id}}
-          {{#each user.purchased as |experience| }}
-          <ul>
-            <li data-id="{{experience.id}}">
-              <div>
-                <a href="/experiences/{{ experience.id }}">{{this}}</a>
-              </div>
-            </li>
-          </ul>
-          {{/each}}
-        </div>
-        <hr class="mt-5">
-
-        {{#if session.creator}}
-        <h1>Your creator Data</h1>
-        <div>{{session.expertise}}</div>
-        <div>{{session.enterpriseEmail}}</div>
-        <div>{{session.politic}}</div>
-        <div>{{session.enterpriseDescription}}</div>
-        <div>{{session.acreditation}}</div>
-        <div><img src="{{session.enterprise_picture}}"></div>
-        <h1>Your experiences created</h1>
-        <hr>
-        {{/if}}
-
-        {{#if session.creator}}
-        <h1>Your seller profile</h1>
-        <img src="{{session.photo}}">
-        <h3>{{session.name}}</h3>
-        <hr>
-        <a class="btn btn-primary mb-3" href="/experiences/create">New experience</a>
-        {{/if}}
-
+      {{#if session.creator}}
+      <section class="pt-5" id="experiences">
+        <h2><span class="far fa-map nt-c mr-3"></span>Your Experiences </h2>
+        <div class="mb-2">
+          <h5 class="mb-3 pt-2 nt-f profile-subtitle">Some description to let everybody know about your adventurer
+            self.</h5>
+          <p class="mb-5 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+            mattis urna sodales ornare semper eros
+            dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi.</p>
+      </section>
+      <a class="btn btn-primary mb-3 btn-naturet nt-f w-100" href="/experiences/create">New experience</a>
+      {{/if}}
       </form>
-
       <ul class="list-group mt-5">
         {{#each user.experiences as |experience|}}
 
-        <li class="list-group-item d-flex justify-content-between align-items-center experience-item" data-id="{{experience.id}}">
+        <li class="list-group-item nt-bc d-flex justify-content-between align-items-center experience-item" data-id="{{experience.id}}">        
           <div>
-            <a href="/experiences/{{ experience.id }}">{{experience.name}}</a>
+            <i><a class="black experience-name-list" href="/experiences/{{ experience.id }}">{{experience.name}}</a></i>
           </div>
           <form action="/experiences/{{experience.id}}/delete" class="float-right">
             <button type="submit" class="btn btn-danger">
@@ -176,10 +224,56 @@
 
         {{/each}}
       </ul>
-
-
     </div>
   </div>
+</div>
+</div>
 
+{{!-- nav-menu-mobile--}}
+<div class="container nav-mobile mx-auto">
+  <div class="row mx-auto align-items-center h-100">
+    <div class="col-3 text-center menu-icon">
+      <a href="/" class="d-flex flex-column-reverse link-nav-mobile">
+        <span class="menu-icon-text">search</span>
+        <span class="icon-home icon-nav"></span>
+      </a>
+    </div>
+    <div class="col-3 text-center menu-icon">
+      <a href="/favorites" class="d-flex flex-column-reverse link-nav-mobile">
+        <span class="menu-icon-text">Favourites</span>
+        <span class="icon-favorites icon-nav"></span>
+      </a>
+    </div>
+    <div class="col-3 text-center menu-icon">
+      <a href="{{#if session.creator}}/experiences/create{{else}}/creator/create{{/if}}" class="d-flex flex-column-reverse link-nav-mobile">
+        <span class="menu-icon-text">Create</span>
+        <span class="icon-new-rute icon-nav"></span>
+      </a>
+    </div>
+    <div class="col-3 text-center menu-icon">
+      <a href="/profile" class="d-flex flex-column-reverse link-nav-mobile">
+        <span class="menu-icon-text active">Profile</span>
+        <span class="icon-profile icon-nav active"></span>
+      </a>
+    </div>
+  </div>
 </div>
-</div>
+{{!-- nav-menu-mobile--}}
+
+<script>
+  jQuery(function ($) {
+    function fixDiv() {
+      var $cache = $('#getFixed');
+      if ($(window).scrollTop() > 100 && $(window).width() >= 1080)
+        $cache.css({
+         'top': '40px'
+        });
+      else
+        $cache.css({
+          'top': 'auto'
+        });
+    }
+    $(window).scroll(fixDiv);
+    fixDiv();
+  });
+</script>
